--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,20 @@ defaults:
     shell: bash
 
 jobs:
+  check-external-types:
+    uses: taiki-e/workflows/.github/workflows/check-external-types.yml@main
+  deny:
+    uses: taiki-e/workflows/.github/workflows/deny.yml@main
+  docs:
+    uses: taiki-e/workflows/.github/workflows/docs.yml@main
+  msrv:
+    uses: taiki-e/workflows/.github/workflows/msrv.yml@main
+    with:
+      event_name: ${{ github.event_name }}
+      args: -vvv --feature-powerset --optional-deps
+  tidy:
+    uses: taiki-e/workflows/.github/workflows/tidy-rust.yml@main
+
   test:
     strategy:
       fail-fast: false
@@ -109,10 +123,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - uses: dtolnay/rust-toolchain@v1
-        with:
-          toolchain: ${{ matrix.rust }}
-          components: rust-src
+      - name: Install Rust
+        run: rustup toolchain add ${{ matrix.rust }} --no-self-update --component rust-src && rustup default ${{ matrix.rust }}
+      - run: rustup toolchain add nightly --no-self-update
       - uses: taiki-e/install-action@cargo-hack
       - uses: taiki-e/install-action@cargo-minimal-versions
       - uses: taiki-e/setup-cross-toolchain-action@v1
@@ -228,7 +241,6 @@ jobs:
         if: startsWith(matrix.target, 'powerpc64-')
 
       - run: cargo minimal-versions build -vvv --workspace --all-features --ignore-private $TARGET $BUILD_STD
-        if: startsWith(matrix.rust, 'nightly')
 
   build:
     strategy:
@@ -244,10 +256,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - uses: dtolnay/rust-toolchain@v1
-        with:
-          toolchain: ${{ matrix.rust }}
-          components: rust-src
+      - name: Install Rust
+        run: rustup toolchain add ${{ matrix.rust }} --no-self-update --component rust-src && rustup default ${{ matrix.rust }}
       - uses: taiki-e/install-action@cargo-hack
       - run: tools/build.sh
 
@@ -257,23 +267,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - uses: dtolnay/rust-toolchain@nightly
+      - name: Install Rust
+        run: rustup toolchain add nightly --no-self-update && rustup default nightly
       - run: sudo apt-get -o Acquire::Retries=10 -qq update && sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y qemu-system-arm
       - run: tools/no-std.sh
-
-  msrv:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-      - uses: taiki-e/install-action@cargo-hack
-      # Make sure this crate can be built with MSRV and all later versions.
-      # However, this takes time, so for PR, set the version interval.
-      - run: cargo hack build -vvv --workspace --feature-powerset --optional-deps --ignore-private --no-dev-deps --version-range ..
-        if: github.event_name != 'pull_request'
-      - run: cargo hack build -vvv --workspace --feature-powerset --optional-deps --ignore-private --no-dev-deps --version-range .. --version-step 2
-        if: github.event_name == 'pull_request'
 
   valgrind:
     env:
@@ -283,7 +280,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - uses: dtolnay/rust-toolchain@nightly
+      - name: Install Rust
+        run: rustup toolchain add nightly --no-self-update && rustup default nightly
       - uses: taiki-e/install-action@valgrind
       # doctests on Valgrind are very slow
       - run: cargo test -vv --workspace --all-features --tests
@@ -316,81 +314,13 @@ jobs:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
           RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg valgrind -C target-feature=+cmpxchg16b
 
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-      - uses: dtolnay/rust-toolchain@nightly
-      - run: cargo doc --workspace --all-features --document-private-items
-
-  check-external-types:
-    env:
-      CARGO_CHECK_EXTERNAL_TYPES_VERSION: 0.1.6
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-      - uses: dtolnay/rust-toolchain@v1
-        with:
-          toolchain: nightly-2022-11-16
-      - name: Pre Cache cargo-check-external-types
-        run: |
-          mkdir -p .github/caching
-          echo "${CARGO_CHECK_EXTERNAL_TYPES_VERSION}" > .github/caching/cargo-check-external-types.lock
-          echo "${{ runner.tool_cache }}/cargo-check-external-types/bin" >> "${GITHUB_PATH}"
-      - name: Cache cargo-check-external-types
-        id: cache-cargo-check-external-types
-        uses: actions/cache@v3
-        with:
-          path: ${{ runner.tool_cache }}/cargo-check-external-types/bin
-          key: cargo-check-external-types-bin-${{ hashFiles('.github/caching/cargo-check-external-types.lock') }}
-      - name: Install cargo-check-external-types
-        run: cargo install -f cargo-check-external-types --root ${{ runner.tool_cache }}/cargo-check-external-types --locked --version "${CARGO_CHECK_EXTERNAL_TYPES_VERSION}"
-        if: steps.cache-cargo-check-external-types.outputs.cache-hit != 'true'
-      - run: cargo check-external-types --all-features --config .external-types.toml
-
-  deny:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-      - uses: dtolnay/rust-toolchain@nightly
-      - uses: taiki-e/install-action@cargo-hack
-      - uses: taiki-e/install-action@cargo-deny
-      # Workaround for https://github.com/EmbarkStudios/cargo-deny/issues/413
-      - run: cargo hack --remove-dev-deps --workspace
-      - run: cargo deny check licenses advisories --config .deny.toml
-
-  tidy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-      - uses: dtolnay/rust-toolchain@nightly
-        with:
-          components: clippy,rustfmt
-      - uses: taiki-e/install-action@shellcheck
-      - uses: taiki-e/install-action@shfmt
-      - run: pip3 install yq
-      - run: cargo fmt --all --check
-        if: always()
-      - run: cargo clippy --workspace --all-features --all-targets
-        if: always()
-      - run: tools/tidy.sh
-        if: always()
-
   # ALL THE PREVIOUS JOBS NEEDS TO BE ADDED TO THE `needs` SECTION OF THIS JOB!
 
   ci-success:
     name: ci
     if: github.event_name == 'push' && success()
     # prettier-ignore
-    needs: [test, build, no-std, msrv, valgrind, docs, check-external-types, deny, tidy] # tidy:needs
+    needs: [check-external-types, deny, docs, msrv, tidy, test, build, no-std, valgrind] # tidy:needs
     runs-on: ubuntu-latest
     steps:
       - name: Mark the job as a success
