--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,6 @@ jobs:
             target: aarch64-unknown-linux-gnu
           - rust: nightly
             target: aarch64_be-unknown-linux-gnu
-            os: ubuntu-22.04
           - rust: stable
             target: arm-unknown-linux-gnueabi
           - rust: nightly
@@ -90,20 +89,16 @@ jobs:
             target: i686-unknown-linux-gnu
           - rust: nightly
             target: mips-unknown-linux-gnu
-            os: ubuntu-22.04
           - rust: nightly
             target: mipsel-unknown-linux-gnu
           - rust: nightly
             target: mips64-unknown-linux-gnuabi64
-            os: ubuntu-22.04
           - rust: nightly
             target: mips64el-unknown-linux-gnuabi64
           - rust: nightly
             target: powerpc-unknown-linux-gnu
-            os: ubuntu-22.04
           - rust: nightly
             target: powerpc64-unknown-linux-gnu
-            os: ubuntu-22.04
           - rust: nightly
             target: powerpc64le-unknown-linux-gnu
           - rust: nightly
@@ -304,7 +299,7 @@ jobs:
       - run: tools/build.sh
 
   no-std:
-    runs-on: ubuntu-22.04 # QEMU 6.2
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v3
