--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,6 +4,7 @@ env:
   CARGO_INCREMENTAL: '0'
   CARGO_NET_GIT_FETCH_WITH_CLI: 'true'
   CARGO_NET_RETRY: '10'
+  CARGO_REGISTRIES_CRATES_IO_PROTOCOL: 'sparse'
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: '1'
   RUST_TEST_THREADS: '1'
