--- a/tests/no-std-qemu/Cargo.toml
+++ b/tests/no-std-qemu/Cargo.toml
@@ -10,6 +10,8 @@ resolver = "2"
 [dependencies]
 atomic-maybe-uninit = { path = "../.." }
 
-cortex-m-rt = "0.7"
-cortex-m-semihosting = "0.5"
 paste = "1"
+semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }
+
+[target.'cfg(all(target_arch = "arm", target_feature = "mclass"))'.dependencies]
+cortex-m-rt = "0.7"
